--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="col-md-8 col-md-offset-1 inner">
                   <h1 class="animated fadeInDown">
                     D<span style="color:#E04343;">u</span><br/>
-                    <span>Li<span style="color:#FFE800">mi</span>ng</span>
+                    <span>Li<span style="color:#FFE800">me</span>ng</span>
                   </h1><!-- Title -->
                   <h3 class="animated fadeInUp delay-05s"><span class="rotate">Frontend Developer,Backend Developer,Web Designer</span></h3><!-- Text Rotator -->
                 </div>
