--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
 				<!-- about / welcome text -->
-                <p>Welcome to my portfolio! I'm Du Liming, a dedicated web developer with a year of hands-on experience in the ever-evolving realm of web development. Since I started my journey on January 1, 2023, I've been on a mission to create engaging and dynamic online experiences.
+                <p>Welcome to my portfolio! I'm Du Limeng, a dedicated web developer with a year of hands-on experience in the ever-evolving realm of web development. Since I started my journey on January 1, 2023, I've been on a mission to create engaging and dynamic online experiences.
 
                   Specializing in Vue.js, CSS, and JavaScript, I've had the pleasure of bringing four unique websites to life over the past year. Each project reflects my commitment to combining aesthetics with functionality, resulting in websites that not only look great but also provide a seamless user experience.</p>
               </div>
